--- a/index.html
+++ b/index.html
@@ -2,8 +2,47 @@
 layout: default
 title: Sonoma Trikes
 ---
+{% include navbar.html %}
 
 <div id="home">
-  <h1>Sonoma Trikes</h1>
-  {% include navbar.html %}
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="http://farm5.staticflickr.com/4069/4712931279_7dd8dca7db_b.jpg" alt="Sonoma Vinyards">
+      <div class="carousel-caption">
+      	  <h1>Sonoma Trikes</h1>
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://farm5.staticflickr.com/4069/4712931279_7dd8dca7db_b.jpg" alt="Sonoma Vinyards">
+      <div class="carousel-caption">
+      	  <h1>Sonoma Trikes</h1>
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://farm5.staticflickr.com/4069/4712931279_7dd8dca7db_b.jpg" alt="Sonoma Vinyards">
+      <div class="carousel-caption">
+      	  <h1>Sonoma Trikes</h1>
+      </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
+
 </div>
