--- a/index.html
+++ b/index.html
@@ -4,45 +4,65 @@ title: Sonoma Trikes
 ---
 {% include navbar.html %}
 
-<div id="home">
-  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
+<h1>Sonoma Trikes <small>Rediscover Cycling... Pain Free</small></h1>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="http://farm5.staticflickr.com/4069/4712931279_7dd8dca7db_b.jpg" alt="Sonoma Vinyards">
-      <div class="carousel-caption">
-      	  <h1>Sonoma Trikes</h1>
-      </div>
-    </div>
-    <div class="item">
-      <img src="http://farm5.staticflickr.com/4069/4712931279_7dd8dca7db_b.jpg" alt="Sonoma Vinyards">
-      <div class="carousel-caption">
-      	  <h1>Sonoma Trikes</h1>
-      </div>
-    </div>
-    <div class="item">
-      <img src="http://farm5.staticflickr.com/4069/4712931279_7dd8dca7db_b.jpg" alt="Sonoma Vinyards">
-      <div class="carousel-caption">
-      	  <h1>Sonoma Trikes</h1>
-      </div>
-    </div>
+<div class="row">
+  <div class="col-md-6">
+    <img class="img-rounded img-responsive" src="http://farm4.staticflickr.com/3682/9768528354_bc7971257c_o.jpg">
+    <h2>Why Ride Trikes?</h2>
+    <ul>
+      <li>Stability – loose gravel, sand, ice, tire blowouts, etc. will not send a trike crashing to the ground.
+      <li>Ride during the winter – hitting a patch of ice is fun on a trike.
+      <li>Do you have trouble balancing? No problem with a trike.
+      <li>No need to drop a foot off the pedal in tight turns to protect against wipeouts
+      <li>Leaning into the turns makes cornering on a trike fun. They handle like a sports car or go-cart – you can even brake-steer on a TerraTrike.
+      <li>Pull up to a stop and never put your foot down on the road
+      <li>No wasted energy balancing the trike on those slow steep climbs – this is the reason that trikes are better climbers than two-wheeled recumbents.
+      <li>More respect from motorists, they slow down and give you a wider berth when passing – primarily out of sheer curiosity.
+      <li>Easier to track a straight line on the side of a road – no need for wobble room during a steep climb in traffic.
+      <li>No need for a kickstand or leaning post.
+      <li>Less road friction/tire scrub from a rider’s side-to-side balance shift (wobble).
+      <li>Instant celebrity status – you may be the first person in your neighborhood with a trike – people will know who you are.
+      <li>Great platform for attaching fairings and accessories.
+    </ul>
   </div>
+  <div class="col-md-6">
+    <div id="map-canvas"></div>
+    <h2>Get your own Trike!</h2>
+    <p>Appointments are available, at the times shown below, and weekends are some what flexible:<br />
+          Mon - Fri: 7:00 am - 7:00 pm<br />
+          Sat - Sun: 10:00 am - 4:00 pm<br />
 
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-  </a>
+      To arrange a visit please call or text (925) 301-7043
+      </p>
+  </div>
 </div>
 
 
-</div>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+<script>
+// This example adds a marker to indicate the position
+// of Bondi Beach in Sydney, Australia
+function initialize() {
+  var mapOptions = {
+    zoom: 14,
+    center: new google.maps.LatLng(38.275081,-122.664113)
+  }
+  var map = new google.maps.Map(document.getElementById('map-canvas'),
+                                mapOptions);
+
+
+  var bikeLayer = new google.maps.BicyclingLayer();
+  bikeLayer.setMap(map);
+
+  var myLatLng = new google.maps.LatLng(38.275081,-122.664113);
+  var marker = new google.maps.Marker({
+      position: myLatLng,
+      map: map,
+      title: 'Sonoma Trikes'
+  });
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+
+</script>
