--- a/trikes/index.html
+++ b/trikes/index.html
@@ -7,7 +7,7 @@ title: Sonoma Trikes - Our Trikes
 
 <h1>Our Trikes</h1> 
 <p>There are a wide range of recumbent trike styles available, with different ride heights, options, front suspension, rear suspension, folding for easy storage/travel/transport, or even fully weatherize velomobiles (enclosed trikes). We can help you find your way through all the options, and keep you within a desired budget, or build an amazing dream machine ready anything.</p>
-<p>If you would like to know more, please contact us to setup a personalized demo appointment around your schedule, anytime from 7am-7pm, 7 days a week (depending of our family schedule :) A demo experience will usually take a hour or so, and if you want to explore any particular models further, we have day or week long rental options available.</p>
+<p>If you would like to know more, please contact us to setup a personalized demo appointment around your schedule, anytime from 7am-7pm, 7 days a week (depending of our family schedule :) A demo experience will usually take a hour or so, and if you want to explore any particular models further, we have day or week long rental options available. Half of the rental price can be used as a credit towards the purchase of your trike!</p>
 <div class="table-responsive">
   <table class="table table-striped tablesorter">
     <thead>
