--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Sonoma Trikes
 ---
 {% include navbar.html %}
 
-<h1>Sonoma Trikes <small>Rediscover Cycling... Pain Free</small></h1>
+<h1>Sonoma Trikes <small>Rediscover Cycling Pain Free</small></h1>
 
 <div class="row">
   <div class="col-md-6">
