Quick copy edits

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ title: Sonoma Trikes
     </section>
     <section>
       <h2>Our Manufacturers</h2>
+      <p>We have a wide selection of trikes available from a range of manufacturers.</p>
       <dl class="manufacturers dl-horizontal">
       {% for manufacture in site.data.manufacturers %}
         <dt>
