Add some actions to take

--- a/rides/index.html
+++ b/rides/index.html
@@ -28,5 +28,7 @@ title: Sonoma Trikes - Rides & Events
       </div>
     </div>
     <p>We start promptly at 10am at the <a href="https://maps.google.com/maps?q=38.428947,-122.743333&hl=en&num=1&t=h&z=19&lci=bike" target="_blank">Goodwill store parking lot off Stony Point Rd. and Hwy 12 adjacent to the Joe Rodota trail</a>. There are several food options in Forestville for a bite to eat at our turn around point. We'll typically stop for coffee or ice cream on the trip, so you will return home calorie neutral.</p>
+    <a class="btn btn-primary" href="mailto:{{site.mailto}}?subject=Rent: For Joe RoTOTa">Rent a Trike for Ride</a>
+    <a class="btn btn-default" href="https://www.facebook.com/SonomaTrikes"><i class="fa fa-facebook"></i> More Details on Facebook</a>
   </div>
 </div>
