Stay 3 accross on iPhone

--- a/rides/index.html
+++ b/rides/index.html
@@ -17,13 +17,13 @@ title: Sonoma Trikes - Rides & Events
     <p>Come join us on for an informal casual paced ride along the Joe Rodota trail from Santa Rosa, through Sebastopol to Forestville and back.</p>
     <p>TOT stands for Trike Optional Tour, but all modes of human powered vehicles are welcome. If you happen to have a recumbent trike, maybe bring it along as it would be fun to have a big trike squadron touring down the bike path.</p>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-xs-4">
         <img class="img-circle img-responsive" src="http://farm6.staticflickr.com/5536/12167213033_ee5554f7fb_o.jpg">
       </div>
-      <div class="col-md-4">
+      <div class="col-xs-4">
         <img class="img-circle img-responsive" src="http://farm3.staticflickr.com/2851/12825249234_2acb09b6b6.jpg">
       </div>
-      <div class="col-md-4">
+      <div class="col-xs-4">
         <img class="img-circle img-responsive" src="http://farm8.staticflickr.com/7383/12824770875_908804f4e8.jpg">
       </div>
     </div>
