--- a/trikes/index.html
+++ b/trikes/index.html
@@ -29,7 +29,7 @@ title: Sonoma Trikes - Our Trikes
           <span class="manufacture">
           {% for manufacture in site.data.manufacturers %}
             {% if manufacture.name == trike.brand %}
-              <a href="{{manufacture.url}}">
+              <a href="{{manufacture.url}}" target="_blank">
               {% if manufacture.icon %}
               <img width="16" height="16" src="{{manufacture.icon}}">
               {% else %}
@@ -43,7 +43,12 @@ title: Sonoma Trikes - Our Trikes
           | 
           <a href="{{trike.url}}" target="_blank">{{trike.name}}</a>
           <p>{{trike.description}}</p>
-        <td>{{trike.msrp}}
+        <td>
+        {% if trike.spec_url %}
+          <a href="{{trike.spec_url}}" target="_blank">{{trike.msrp}}</a>
+        {% else %}
+          {{trike.msrp}}
+        {% endif %}
         <td>
           {% if trike.rental_rate_week %}
           {{trike.rental_rate_week}}/week
