Paragraph tags again

--- a/rides/index.html
+++ b/rides/index.html
@@ -18,13 +18,13 @@ title: Sonoma Trikes - Rides & Events
     <p>TOT stands for Trike Optional Tour, but all modes of human powered vehicles are welcome. If you happen to have a recumbent trike, maybe bring it along as it would be fun to have a big trike squadron touring down the bike path.</p>
     <div class="row">
       <div class="col-xs-4">
-        <img class="img-circle img-responsive" src="http://farm6.staticflickr.com/5536/12167213033_ee5554f7fb_o.jpg">
+        <p><img class="img-circle img-responsive" src="http://farm6.staticflickr.com/5536/12167213033_ee5554f7fb_o.jpg"></p>
       </div>
       <div class="col-xs-4">
-        <img class="img-circle img-responsive" src="http://farm3.staticflickr.com/2851/12825249234_2acb09b6b6.jpg">
+        <p><img class="img-circle img-responsive" src="http://farm3.staticflickr.com/2851/12825249234_2acb09b6b6.jpg"></p>
       </div>
       <div class="col-xs-4">
-        <img class="img-circle img-responsive" src="http://farm8.staticflickr.com/7383/12824770875_908804f4e8.jpg">
+        <p><img class="img-circle img-responsive" src="http://farm8.staticflickr.com/7383/12824770875_908804f4e8.jpg"></p>
       </div>
     </div>
     <p>We start promptly at 10am at the <a href="https://maps.google.com/maps?q=38.428947,-122.743333&hl=en&num=1&t=h&z=19&lci=bike" target="_blank">Goodwill store parking lot off Stony Point Rd. and Hwy 12 adjacent to the Joe Rodota trail</a>. There are several food options in Forestville for a bite to eat at our turn around point. We'll typically stop for coffee or ice cream on the trip, so you will return home calorie neutral.</p>
