Add some STRONG reasons

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@ title: Sonoma Trikes
     </ul>
     <h2>Why Ride Trikes?</h2>
     <ul>
-      <li>Stability – loose gravel, sand, ice, tire blowouts, etc. will not send a trike crashing to the ground.
+      <li><strong>Stability</strong> – loose gravel, sand, ice, tire blowouts, etc. will not send a trike crashing to the ground.
       <li>Ride during the winter – hitting a patch of ice is fun on a trike.
-      <li>Do you have trouble balancing? No problem with a trike.
+      <li>Do you have trouble <strong>balancing</strong>? No problem with a trike.
       <li>No need to drop a foot off the pedal in tight turns to protect against wipeouts
       <li>Leaning into the turns makes cornering on a trike fun. They handle like a sports car or go-cart – you can even brake-steer on a TerraTrike.
       <li>Pull up to a stop and never put your foot down on the road
-      <li>No wasted energy balancing the trike on those slow steep climbs – this is the reason that trikes are better climbers than two-wheeled recumbents.
-      <li>More respect from motorists, they slow down and give you a wider berth when passing – primarily out of sheer curiosity.
+      <li>No wasted energy balancing the trike on those slow <strong>steep climbs</strong> – this is the reason that trikes are better climbers than two-wheeled recumbents.
+      <li>More <strong>respect from motorists</strong>, they slow down and give you a wider berth when passing – primarily out of sheer curiosity.
       <li>Easier to track a straight line on the side of a road – no need for wobble room during a steep climb in traffic.
       <li>No need for a kickstand or leaning post.
       <li>Less road friction/tire scrub from a rider’s side-to-side balance shift (wobble).
-      <li>Instant celebrity status – you may be the first person in your neighborhood with a trike – people will know who you are.
+      <li>Instant <strong>celebrity status</strong> – you may be the first person in your neighborhood with a trike – people will know who you are.
       <li>Great platform for attaching fairings and accessories.
     </ul>
   </div>
