Awesome header on trikes page

--- a/trikes/index.html
+++ b/trikes/index.html
@@ -5,9 +5,21 @@ title: Sonoma Trikes - Our Trikes
 
 {% include navbar.html %}
 
-<h1>Our Trikes</h1> 
-<p>There are a wide range of recumbent trike styles available, with different ride heights, options, front suspension, rear suspension, folding for easy storage/travel/transport, or even fully weatherized velomobiles (enclosed trikes). We can help you find your way through all the options, and keep you within a desired budget, or build an amazing dream machine ready for anything.</p>
-<p>If you would like to know more, please contact us to setup a personalized demo appointment around your schedule, anytime from 7am-7pm, 7 days a week (depending of our family schedule). A demo experience will usually take a hour or so, and if you want to explore any particular models further, we have day or week long rental options available. Half of the rental price can be used as a credit towards the purchase of your trike!</p>
+<h1>Our Trikes</h1>
+<div class="row">
+  <div class="col-sm-2">
+    <ul class="rslides">
+    {% for image in site.data.images.front_page %}
+      <li><img class="img-rounded img-responsive" src="/img/rotate/{{image}}">
+    {% endfor %}
+    </ul>
+    <p></p>
+  </div>
+  <div class="col-sm-10">
+    <p>There are a wide range of recumbent trike styles available, with different ride heights, options, front suspension, rear suspension, folding for easy storage/travel/transport, or even fully weatherized velomobiles (enclosed trikes). We can help you find your way through all the options, and keep you within a desired budget, or build an amazing dream machine ready for anything.</p>
+    <p>If you would like to know more, please contact us to setup a <strong>personalized demo appointment</strong> around your schedule, anytime from 7am-7pm, 7 days a week (depending of our family schedule). A demo experience will usually take a hour or so, and if you want to explore any particular models further, we have <strong>day or week long rental</strong> options available. Half of the rental price can be used as a credit towards the purchase of your trike!</p>
+  </div>
+</div>
 <div class="table-responsive">
   <table class="table table-striped tablesorter">
     <thead>
