--- a/trikes/index.html
+++ b/trikes/index.html
@@ -71,9 +71,9 @@ title: Sonoma Trikes - Our Trikes
             {% if trike.order_url %}
             <a class="btn btn-sm btn-block btn-success" href="{{trike.order_url}}"><strong>Order Now</strong></a>
             {% endif %}
-            <a class="btn btn-sm btn-block btn-primary" href="mailto:{{site.mailto}}?subject=Demo Ride: {{trike.name | uri_escape}}">Schedule a Demo Ride</a>
+            <a class="btn btn-sm btn-block btn-primary btn-email" href="mailto:{{site.mailto}}?subject=Demo Ride: {{trike.name | uri_escape}}">Schedule a Demo Ride</a>
             {% if trike.rental_rate_week %}
-            <a class="btn btn-sm btn-block btn-default" href="mailto:{{site.mailto}}?subject=Rent: {{trike.name | uri_escape}}">Rent a {{trike.name}}</a>
+            <a class="btn btn-sm btn-block btn-default btn-email" href="mailto:{{site.mailto}}?subject=Rent: {{trike.name | uri_escape}}">Rent a {{trike.name}}</a>
             {% endif %}
             <button type="button" class="btn btn-sm btn-block btn-default btn-popover" data-container="body" data-toggle="popover" data-html="true" data-placement="left" data-title="{{trike.name}}" data-content="{% include trike_details.html params=trike %}">
              Show Details
