--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@ title: Sonoma Trikes
 ---
 {% include navbar.html %}
 
-<h1>Sonoma Trikes <small>Rediscover Cycling Pain Free</small></h1>
 
+<h1>Sonoma Trikes <small>Rediscover Cycling Pain Free</small></h1>
 <div class="row">
   <div class="col-md-6">
+    <img class="img-logo" src="/img/logo.svg">
     <ul class="rslides">
     {% for image in site.data.images.front_page %}
       <li><img class="img-rounded img-responsive" src="/img/rotate/{{image}}">
