--- a/accessories/index.html
+++ b/accessories/index.html
@@ -22,4 +22,9 @@ title: Sonoma Trikes - Upgrades & Accessories
   	<p>From their balloon bike Big Apple, trike specific Tryker, or high speed Kojak Schwalbe Tires are some of the highest quality and most durable tires for your trike.</p>
   	<p><img src="https://farm3.staticflickr.com/2834/12824279233_85d2c4106a_z_d.jpg" class="img-rounded img-responsive"></p>
   </div>
+  <div class="col-md-4">
+    <h3>eBike Conversions</h3>
+    <p>Some times your just carrying too much stuff for your own two legs. Let our eBike conversion kits from <a href="http://gocarlite.com/">Electric Bike Solutions</a> take some of the load.</p>
+    <p><img src="https://farm8.staticflickr.com/7164/13613817423_81f726d876_z_d.jpg" class="img-rounded img-responsive"></p>
+  </div>
 </div>
