Add indoor trainers

--- a/accessories/index.html
+++ b/accessories/index.html
@@ -28,3 +28,10 @@ title: Sonoma Trikes - Upgrades & Accessories
     <p><img src="https://farm8.staticflickr.com/7164/13613817423_81f726d876_z_d.jpg" class="img-rounded img-responsive"></p>
   </div>
 </div>
+<div class="row">
+  <div class="col-md-4">
+    <h3>Indoor Trainers</h3>
+    <p>Even in lovely Sonoma County there are days when you don't want to deal with the rain or the impenetrable fog. Our indoor trainers from <a href="https://www.sportcrafters.com/products/trike-trainers">Sport Crafters</a> are great for long evening rides, with a glass of wine.</p>
+    <p><img src="https://farm3.staticflickr.com/2861/12839934874_685486c3a6_z_d.jpg" class="img-rounded img-responsive"></p>
+  </div>
+</div>
