Lead and spelling

--- a/accessories/index.html
+++ b/accessories/index.html
@@ -8,7 +8,7 @@ title: Sonoma Trikes - Upgrades & Accessories
 
 <h1>Upgrades &amp; Accessories</h1> 
 
-<p>In adition to the complete line of accessories offered for each trike by our manufactures we cary a range of accessories to make your trike riding experience even better!</p>
+<p class="lead">In addition to the complete line of accessories offered for each trike by our manufactures we cary a range of accessories to make your trike riding experience even better!</p>
 
 <h2>Featured Brands</h2>
 <div class="row">
