--- a/accessories/index.html
+++ b/accessories/index.html
@@ -19,7 +19,7 @@ title: Sonoma Trikes - Upgrades & Accessories
   </div>
   <div class="col-md-6">
   	<h3>Schwalbe Tires</h3>
-  	<p>From their balloon bike Big Apple, trike specific Tryker, or high speed Kojak Schwalbe Tires are some of the highest quality and most durable tires for your trike.</p>
+  	<p>From their balloon bike <a href="http://www.schwalbetires.com/bike_tires/road_tires/big_apple">Big Apple</a>, trike specific <a href="http://www.schwalbetires.com/bike_tires/recumbent/tryker">Tryker</a>, or high speed <a href="http://www.schwalbetires.com/bike_tires/road_tires/kojak">Kojak</a> <a href="http://www.schwalbetires.com/">Schwalbe Tires</a> are some of the highest quality and most durable tires for your trike.</p>
   	<p><img src="https://farm3.staticflickr.com/2834/12824279233_85d2c4106a_z_d.jpg" class="img-rounded img-responsive"></p>
   </div>
 </div>
