--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: Sonoma Trikes
   <div class="col-md-6">
     <section>
       <h2>Get your own Trike!</h2>
-      <p>Appointments are available, anytime from 7am-7pm, 7 days a week. To arrange a visit please call or text <a href="tel:+1-707-559-8101">(707) 559-8101</a> or email us at <a href="mailto:sonomatrikes@gmail.com">sonomatrikes@gmail.com</a>
+      <p>{% include hours.html %} To arrange a visit please call or text <a href="tel:+1-707-559-8101">(707) 559-8101</a> or email us at <a href="mailto:sonomatrikes@gmail.com">sonomatrikes@gmail.com</a>.
       </p>
       <div id="map-canvas"></div>
       <p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
