--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Sonoma Trikes
 <h1>Sonoma Trikes <small>Rediscover Cycling Pain Free</small></h1>
 <div class="row">
   <div class="col-md-6">
-    <img class="img-logo" src="/img/logo.svg">
+    <img class="img-logo" src="/img/logo-hills.svg">
     <ul class="rslides">
     {% for image in site.data.images.front_page %}
       <li><img class="img-rounded img-responsive" src="/img/rotate/{{image}}">
