--- a/trikes/index.html
+++ b/trikes/index.html
@@ -36,6 +36,9 @@ title: Sonoma Trikes - Our Trikes
         <td>
           <a href="{{trike.url}}" target="_blank"><img class="img-rounded" width="160" src="{{trike.img}}"></a>
           {% include compare.html params=trike %}
+          {% if trike.backordered %}
+          <span class="label label-warning"><i class="fa fa-frown-o"></i> Backordered</span>
+          {% endif %}
         <td>
           <p>
             <span class="manufacture">
@@ -70,9 +73,15 @@ title: Sonoma Trikes - Our Trikes
             {% if trike.order_url %}
             <a class="btn btn-sm btn-block btn-success" href="{{trike.order_url}}"><strong>Order Now</strong></a>
             {% endif %}
+            {% unless trike.backordered %}
             <a class="btn btn-sm btn-block btn-primary btn-email" href="mailto:{{site.mailto}}?subject=Demo Ride: {{trike.name | uri_escape}}">Schedule a Demo Ride</a>
+            {% else %}
+            <a class="btn btn-sm btn-block btn-default btn-email" href="mailto:{{site.mailto}}?subject=Notify me when in stock: {{trike.name | uri_escape}}">Notify me when Available</a>
+            {% endunless %}
             {% if trike.rental_rate_week %}
+            {% unless trike.backordered %}
             <a class="btn btn-sm btn-block btn-default btn-email" href="mailto:{{site.mailto}}?subject=Rent: {{trike.name | uri_escape}}">Rent a {{trike.name}}</a>
+            {% endunless %}
             {% endif %}
             <button type="button" class="btn btn-sm btn-block btn-default btn-popover" data-container="body" data-toggle="popover" data-html="true" data-placement="left" data-title="{{trike.name}}" data-content="{% include trike_details.html params=trike %}">
              Show Details
