--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@ title: Sonoma Trikes
       <h2>Get your own Trike!</h2>
       <p>{% include hours.html %} To arrange a visit please call or text <a href="tel:+1-707-559-8101">(707) 559-8101</a> or email us at <a href="mailto:sonomatrikes@gmail.com">sonomatrikes@gmail.com</a>.
       </p>
+      <div class="alert alert-warning">
+        <strong><i class="fa fa-truck"></i> We're moving!</strong> Our hours may be limited while we're moving and building out our great new location! Please call ahead.
+      </div>
       <div id="map-canvas"></div>
       <p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-        <a href="https://maps.google.com/maps?q=1364+North+McDowell+Blvd+%235+Petaluma,+CA+94954&hnear=1364+N+McDowell+Blvd+%235,+Petaluma,+California+94954&gl=us&t=h&z=16&iwloc=A">
-        <span itemprop="streetAddress">1364 North McDowell Blvd #5</span><br />
-        <span itemprop="addressLocality">Petaluma</span>,
-        <span itemprop="addressRegion">CA</span> <span itemprop="postalCode">94954</span>
+        <a href="https://www.google.com/maps/place/1400+Valley+House+Dr/@38.322743,-122.6805841,17z/data=!3m1!4b1!4m2!3m1!1s0x80844ae44b762e79:0xb8b09fe22a1a774d">
+          <span itemprop="streetAddress">1400 Valley House Road, Suite B</span><br />
+          <span itemprop="addressLocality">Rohnert Park</span>,
+          <span itemprop="addressRegion">CA</span> <span itemprop="postalCode">94928</span>
         </a>
       </p>
     </section>
@@ -74,7 +77,7 @@ title: Sonoma Trikes
 function initialize() {
   var mapOptions = {
     zoom: 14,
-    center: new google.maps.LatLng(38.275081,-122.664113)
+    center: new google.maps.LatLng(38.322743,-122.6805841)
   }
   var map = new google.maps.Map(document.getElementById('map-canvas'),
                                 mapOptions);
@@ -83,7 +86,7 @@ function initialize() {
   var bikeLayer = new google.maps.BicyclingLayer();
   bikeLayer.setMap(map);
 
-  var myLatLng = new google.maps.LatLng(38.275081,-122.664113);
+  var myLatLng = new google.maps.LatLng(38.322743,-122.6805841);
   var marker = new google.maps.Marker({
       position: myLatLng,
       map: map,
