--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Sonoma Trikes
 {% include navbar.html %}
 
 
-<h1>Sonoma Trikes <small>Rediscover Cycling Pain Free</small></h1>
+<h1>Sonoma Trikes <small>Wellness on Wheels</small></h1>
 <div class="row">
   <div class="col-md-6">
     <img class="img-logo" src="/img/logo-hills.svg">
