Add "directions" and shop photo

--- a/index.html
+++ b/index.html
@@ -37,16 +37,26 @@ title: Sonoma Trikes
       <p>{% include hours.html %} To arrange a visit please call or text <a href="tel:+1-707-559-8101">(707) 559-8101</a> or email us at <a href="mailto:sonomatrikes@gmail.com">sonomatrikes@gmail.com</a>.
       </p>
       <div class="alert alert-warning">
-        <strong><i class="fa fa-truck"></i> We're moving!</strong> Our hours may be limited while we're moving and building out our great new location! Please call ahead.
+        <strong><i class="fa fa-truck"></i> We've moved!</strong> Our hours may be limited until our grand opening! Please call ahead.
+      </div>
+      <div class="row">
+        <div class="col-xs-6">
+          <p><img class="img-rounded img-responsive" src="/img/shop/2014-08-02.jpg"></p>
+        </div>
+        <div class="col-xs-6">
+          <p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+            <a href="https://www.google.com/maps/place/1400+Valley+House+Dr/@38.322743,-122.6805841,17z/data=!3m1!4b1!4m2!3m1!1s0x80844ae44b762e79:0xb8b09fe22a1a774d">
+              <span itemprop="streetAddress">1400 Valley House Road, Suite B</span><br />
+              <span itemprop="addressLocality">Rohnert Park</span>,
+              <span itemprop="addressRegion">CA</span> <span itemprop="postalCode">94928</span>
+            </a>
+          </p>
+          <p>
+          Located in the Sonoma Mountain Village, west of Sally Tomatoes, in the maintence/ warehouse area near all the Comcast truck lot, railroad track and big soccer field.
+          </p>
+        </div>
       </div>
       <div id="map-canvas"></div>
-      <p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-        <a href="https://www.google.com/maps/place/1400+Valley+House+Dr/@38.322743,-122.6805841,17z/data=!3m1!4b1!4m2!3m1!1s0x80844ae44b762e79:0xb8b09fe22a1a774d">
-          <span itemprop="streetAddress">1400 Valley House Road, Suite B</span><br />
-          <span itemprop="addressLocality">Rohnert Park</span>,
-          <span itemprop="addressRegion">CA</span> <span itemprop="postalCode">94928</span>
-        </a>
-      </p>
     </section>
     <section>
       <h2>Our Manufacturers</h2>
