--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ title: Sonoma Trikes
             </a>
           </p>
           <p>
-          Located in the Sonoma Mountain Village, west of Sally Tomatoes, in the maintence/ warehouse area near all the Comcast truck lot, railroad track and big soccer field.
+          Located in the Sonoma Mountain Village, west of Sally Tomatoes, in the maintence/ warehouse area near the Comcast truck lot, railroad track and big soccer field.
           </p>
         </div>
       </div>
