--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ title: Sonoma Trikes
         <div class="col-xs-6">
           <p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
             <a href="https://www.google.com/maps/place/1400+Valley+House+Dr/@38.322743,-122.6805841,17z/data=!3m1!4b1!4m2!3m1!1s0x80844ae44b762e79:0xb8b09fe22a1a774d">
-              <span itemprop="streetAddress">1400 Valley House Road, Suite B</span><br />
+              <span itemprop="streetAddress">1400 Valley House Road, Suite A</span><br />
               <span itemprop="addressLocality">Rohnert Park</span>,
               <span itemprop="addressRegion">CA</span> <span itemprop="postalCode">94928</span>
             </a>
