--- a/trikes/index.html
+++ b/trikes/index.html
@@ -55,7 +55,7 @@ title: Sonoma Trikes - Our Trikes
             | 
             <a href="{{trike.url}}" target="_blank">{{trike.name}}</a>
             {% if trike.backordered %}
-            <span class="label label-warning"><i class="fa fa-frown-o"></i> On Order</span>
+            <span class="label label-warning">Not in stock (3 week lead time)</span>
             {% endif %}
           </p>
           <p>{{trike.description}}</p>
